Add localization support for activity-related features and update UI labels
- Added new Russian, Swedish, and Chinese translations for activity statistics, achievements, and related terms.
- Updated UI components to use localized strings for activity statistics, distance, moving time, and other relevant fields.
- Enhanced user experience by ensuring all relevant buttons and labels are translated and accessible.

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -265,7 +265,140 @@
     "copy_link": "نسخ الوصلة",
     "count_txt": "النتائج مطابقة بحثك",
     "create_collection_first": "قم بإنشاء مجموعة أولاً لتنظيم مغامراتك وذكرياتك.",
-    "create_location": "إنشاء الموقع"
+    "create_location": "إنشاء الموقع",
+    "achievements": "الإنجازات",
+    "active_duration": "مدة نشطة",
+    "activities_name": "أنشطة",
+    "activity_name": "اسم النشاط",
+    "activity_name_placeholder": "تشغيل الصباح",
+    "activity_name_required": "اسم النشاط مطلوب",
+    "activity_options": "خيارات النشاط",
+    "activity_statistics": "إحصائيات النشاط",
+    "activity_statistics_description": "إنجازاتك اللياقة والنشاط",
+    "add_activity": "أضف النشاط",
+    "add_first_trail": "أضف مسارك الأول باستخدام الزر أعلاه",
+    "add_new_activity": "أضف نشاطًا جديدًا",
+    "add_new_trail": "أضف مسار جديد",
+    "add_trail": "أضف درب",
+    "add_visit": "أضف زيارة",
+    "add_wanderer_trail": "أضف Wanderer Trail",
+    "attachment_management": "إدارة المرفقات",
+    "attachment_name_required": "اسم المرفق المطلوب",
+    "attachment_remove_error": "حدث خطأ أثناء إزالة المرفق",
+    "attachment_removed": "إزالتها بنجاح",
+    "attachment_updated": "تم تحديث المرفق بنجاح",
+    "average_cadence": "متوسط الإيقاع",
+    "average_speed": "متوسط السرعة",
+    "avg_speed": "متوسط السرعة",
+    "back": "خلف",
+    "cadence": "إيقاع",
+    "calories": "سعرات حرارية",
+    "click_map": "انقر على الخريطة لتحديد موقع",
+    "click_on_map": "انقر على الخريطة لتحديد موقع",
+    "complete_import": "استيراد كامل",
+    "complete_strava_import": "استكمال استيراد Strava",
+    "confirm_delete_activity": "هل أنت متأكد من أنك تريد حذف هذا النشاط؟",
+    "connect_to_wanderer": "الاتصال بالتجول",
+    "continue": "يكمل",
+    "create_new_location": "إنشاء موقع جديد",
+    "create_trail": "إنشاء درب",
+    "created": "مخلوق",
+    "current_attachments": "المرفقات الحالية",
+    "date_selection": "اختيار التاريخ",
+    "download_gpx": "تنزيل GPX",
+    "edit_visit": "تحرير الزيارة",
+    "elapsed_time": "الوقت المنقضي",
+    "elevation": "ارتفاع",
+    "elevation_gain": "ربح الارتفاع",
+    "elevation_high": "ارتفاع مرتفع",
+    "elevation_loss": "فقدان الارتفاع",
+    "elevation_low": "ارتفاع منخفض",
+    "end_lat": "نهاية خط العرض",
+    "end_lng": "نهاية الطول",
+    "export_gpx": "تصدير GPX",
+    "export_original": "تصدير الأصل",
+    "external_link": "الرابط الخارجي",
+    "gain": "يكسب",
+    "getting_location_details": "الحصول على تفاصيل الموقع",
+    "gpx_file": "ملف GPX",
+    "gpx_file_downloaded": "تم تنزيل ملف GPX. \nيرجى تحميله أدناه لإكمال الاستيراد.",
+    "gpx_file_required": "ملف GPX مطلوب",
+    "image_management": "إدارة الصور",
+    "import_activity": "نشاط الاستيراد",
+    "importing": "الاستيراد",
+    "likes": "يحب",
+    "loading_activities": "أنشطة التحميل",
+    "location_display_name": "اسم عرض الموقع",
+    "location_map": "موقع",
+    "location_selected": "الموقع المحدد",
+    "max_speed": "السرعة القصوى",
+    "moving_time": "وقت التحرك",
+    "next_image": "الصورة التالية",
+    "no_attachments_uploaded_yet": "لم يتم تحميل أي مرفقات حتى الآن",
+    "no_external_link": "لا يوجد رابط خارجي متاح",
+    "no_trails_available": "لا مسارات متاحة",
+    "no_trails_found_matching": "لم يتم العثور على مسارات مطابقة",
+    "no_visits_description": "قم بإنشاء زيارتك الأولى عن طريق اختيار التواريخ أعلاه",
+    "notes_placeholder": "أضف ملاحظات حول هذه الزيارة",
+    "or": "أو",
+    "pace": "خطوة",
+    "photos": "صور",
+    "previous_image": "الصورة السابقة",
+    "processing": "يعالج",
+    "public_location_description": "اجعل هذا الموقع مرئيًا للمستخدمين الآخرين",
+    "remove_visit": "أخرج زيارة",
+    "rest_time": "وقت الراحة",
+    "saved_activities": "أنشطة محفوظة",
+    "search_location": "ابحث عن موقع",
+    "search_placeholder": "أدخل المدينة أو الموقع أو المعلم ...",
+    "search_trails_placeholder": "مسارات البحث بالاسم",
+    "searching": "البحث",
+    "select_on_map": "حدد على الخريطة",
+    "select_wanderer_trail": "حدد مسارًا من حساب Wanderer الخاص بك",
+    "sport_type": "نوع الرياضة",
+    "sport_type_placeholder": "درب الجري",
+    "start_lat": "ابدأ خط العرض",
+    "start_lng": "ابدأ خط الطول",
+    "strava_activities_during_visit": "أنشطة سترافا أثناء الزيارة",
+    "strava_activity_ready": "نشاط سترافا جاهز",
+    "time": "وقت",
+    "total_covered": "إجمالي مغطى",
+    "total_recorded": "المسجل مجموع",
+    "trail": "أثر",
+    "trail_created_successfully": "تم إنشاء درب بنجاح",
+    "trail_creation_failed": "فشل في إنشاء درب",
+    "trail_fetch_failed": "فشل في جلب مسارات التجوال",
+    "trail_link_required": "مطلوب رابط درب",
+    "trail_name": "اسم درب",
+    "trail_removal_failed": "فشل في إزالة الممر",
+    "trail_removed_successfully": "تريل إزالته بنجاح",
+    "trail_update_failed": "فشل في تحديث الممر",
+    "trail_updated_successfully": "تم تحديث درب بنجاح",
+    "trails": "مسارات",
+    "trails_found_for": "مسارات وجدت ل",
+    "trails_management": "إدارة المسارات",
+    "trails_management_description": "إدارة المسارات المرتبطة بهذا الموقع. \nيمكن ربط المسارات بالخدمات الخارجية مثل Alltrails أو Link to Wanderer Trails.",
+    "update_location_details": "تحديث تفاصيل الموقع",
+    "update_visit": "تحديث زيارة",
+    "upload_activity": "تحميل النشاط",
+    "upload_attachment": "تحميل المرفق",
+    "upload_first_attachment": "قم بتحميل مرفقك الأول باستخدام الخيارات أعلاه",
+    "upload_first_image": "قم بتحميل صورتك الأولى باستخدام أحد الخيارات أعلاه",
+    "upload_from_device": "تحميل من الجهاز",
+    "upload_from_url": "تحميل من عنوان URL",
+    "upload_gpx_file": "قم بتحميل ملف GPX الذي تم تنزيله للتو لإكمال استيراد Strava",
+    "uploading": "التحميل",
+    "use_current_location": "استخدم الموقع الحالي",
+    "view_gpx": "عرض GPX",
+    "view_on": "عرض على",
+    "view_strava_activities": "عرض أنشطة سترافا",
+    "view_trail": "عرض درب",
+    "wanderer_integration_error": "لا يتم تمكين تكامل Wanderer أو انتهت صلاحيته.",
+    "wikipedia_error": "فشل توليد وصف من ويكيبيديا",
+    "no_file_selected": "لم يتم تحديد ملف",
+    "no_images_uploaded_yet": "لا توجد صور تم تحميلها بعد",
+    "no_strava_activities": "لم يتم العثور على أنشطة سترافا خلال هذه الزيارة",
+    "no_trails_added": "لا توجد مسارات بعد ذلك"
   },
   "auth": {
     "confirm_password": "تأكيد كلمة المرور",
@@ -717,7 +850,8 @@
     "disconnected": "تم قطع الاتصال بنجاح عن Strava",
     "not_configured": "Strava لم يتم تكوينه",
     "ready_to_connect": "جاهز للاتصال",
-    "strava_integration_desc": "اتصل بـ Strava لاستيراد التنشيطات الخاصة بك بسهولة إلى مواقع وزيارات"
+    "strava_integration_desc": "اتصل بـ Strava لاستيراد التنشيطات الخاصة بك بسهولة إلى مواقع وزيارات",
+    "gpx_required": "يرجى تحميل ملف GPX لإكمال استيراد Strava"
   },
   "transportation": {
     "edit": "يحرر",
@@ -805,6 +939,7 @@
     "view_cities": "عرض المدن",
     "visit_remove_failed": "فشل في إزالة الزيارة",
     "visit_to": "زيارة",
-    "visited_first": "زار أولاً"
+    "visited_first": "زار أولاً",
+    "getting_location_details": "الحصول على تفاصيل الموقع"
   }
 }
