--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -266,7 +266,140 @@
     "leave_collection_warning": "Sind Sie sicher, dass Sie diese Sammlung verlassen möchten? \nAlle von Ihnen hinzugefügten Standorte werden nicht verknüpft und bleiben in Ihrem Konto.",
     "left_collection_message": "Erfolgreich verlassene Sammlung",
     "loading_collections": "Ladesammlungen ...",
-    "quick_start": "Schneller Start"
+    "quick_start": "Schneller Start",
+    "achievements": "Erfolge",
+    "active_duration": "Aktive Dauer",
+    "activities_name": "Aktivitäten",
+    "activity_name": "Aktivitätsname",
+    "activity_name_placeholder": "Morgenlauf",
+    "activity_name_required": "Aktivitätsname ist erforderlich",
+    "activity_options": "Aktivitätsoptionen",
+    "activity_statistics": "Aktivitätsstatistik",
+    "activity_statistics_description": "Ihre Fitness- und Aktivitätsleistungen",
+    "add_activity": "Aktivität hinzufügen",
+    "add_first_trail": "Fügen Sie Ihren ersten Trail mit der Schaltfläche oben hinzu",
+    "add_new_activity": "Neue Aktivität hinzufügen",
+    "add_trail": "Trail hinzufügen",
+    "add_visit": "Besuch hinzufügen",
+    "add_wanderer_trail": "Fügen Sie Wanderer Trail hinzu",
+    "attachment_management": "Bindungsmanagement",
+    "attachment_name_required": "Anhangsname erforderlich",
+    "attachment_remove_error": "Ein Fehler beim Entfernen des Anhangs trat auf",
+    "attachment_removed": "Anhaftung erfolgreich entfernt",
+    "attachment_updated": "Anhang erfolgreich aktualisiert",
+    "average_cadence": "Durchschnittliche Trittfrequenz",
+    "average_speed": "Durchschnittsgeschwindigkeit",
+    "avg_speed": "Durchschnittsgeschwindigkeit",
+    "back": "Zurück",
+    "cadence": "Kadenz",
+    "calories": "Kalorien",
+    "click_map": "Klicken Sie auf die Karte, um einen Speicherort auszuwählen",
+    "click_on_map": "Klicken Sie auf die Karte, um einen Speicherort auszuwählen",
+    "complete_import": "Vollständige Import",
+    "complete_strava_import": "Vollständige Strava -Import",
+    "confirm_delete_activity": "Sind Sie sicher, dass Sie diese Aktivität löschen möchten?",
+    "connect_to_wanderer": "Verbinden Sie sich mit Wanderer",
+    "continue": "Weitermachen",
+    "create_new_location": "Neuen Standort erstellen",
+    "create_trail": "Trail erstellen",
+    "created": "Erstellt",
+    "current_attachments": "Aktuelle Anhänge",
+    "date_selection": "Datumauswahl",
+    "download_gpx": "Laden Sie GPX herunter",
+    "edit_visit": "Besuch bearbeiten",
+    "elapsed_time": "Verstrichene Zeit",
+    "elevation": "Elevation",
+    "elevation_gain": "Höhengewinn",
+    "elevation_high": "Höhe hoch",
+    "elevation_loss": "Höhenverlust",
+    "elevation_low": "Höhe niedrig",
+    "end_lat": "Ende Breite",
+    "end_lng": "Ende der Länge",
+    "export_gpx": "Exportieren Sie GPX",
+    "export_original": "Original exportieren",
+    "external_link": "Externer Link",
+    "gain": "gewinnen",
+    "getting_location_details": "Standortdetails erhalten",
+    "gpx_file": "GPX -Datei",
+    "gpx_file_downloaded": "GPX -Datei heruntergeladen. \nBitte laden Sie es unten hoch, um den Import zu vervollständigen.",
+    "gpx_file_required": "GPX -Datei erforderlich",
+    "image_management": "Bildverwaltung",
+    "import_activity": "Importaktivität",
+    "importing": "Import",
+    "likes": "Mag",
+    "loading_activities": "Ladeaktivitäten",
+    "location_display_name": "Standort Anzeigename",
+    "location_map": "Standort",
+    "location_selected": "Ort ausgewählt",
+    "max_speed": "Maximale Geschwindigkeit",
+    "moving_time": "Umzugszeit",
+    "next_image": "Nächstes Bild",
+    "no_attachments_uploaded_yet": "Noch keine Anhänge hochgeladen",
+    "no_external_link": "Kein externer Link verfügbar",
+    "no_file_selected": "Keine Datei ausgewählt",
+    "no_images_uploaded_yet": "Noch keine Bilder hochgeladen",
+    "no_strava_activities": "Keine Strava -Aktivitäten bei diesem Besuch gefunden",
+    "no_trails_added": "Noch keine Wege hinzugefügt",
+    "no_trails_available": "Keine Wanderwege verfügbar",
+    "no_trails_found_matching": "Keine Pfade gefunden passend",
+    "no_visits_description": "Erstellen Sie Ihren ersten Besuch, indem Sie die obigen Daten auswählen",
+    "notes_placeholder": "Fügen Sie Notizen zu diesem Besuch hinzu",
+    "or": "ODER",
+    "pace": "Tempo",
+    "photos": "Fotos",
+    "previous_image": "Vorheriges Bild",
+    "processing": "Verarbeitung",
+    "public_location_description": "Machen Sie diesen Ort für andere Benutzer sichtbar",
+    "remove_visit": "Besuch entfernen",
+    "rest_time": "Ruhezeit",
+    "saved_activities": "Gespeicherte Aktivitäten",
+    "search_location": "Suche nach einem Ort",
+    "search_placeholder": "Betreten Sie die Stadt, den Standort oder Wahrzeichen ...",
+    "search_trails_placeholder": "Suchwege nach Namensuche suchen",
+    "searching": "Suche",
+    "select_on_map": "Wählen Sie auf der Karte",
+    "select_wanderer_trail": "Wählen Sie einen Weg aus Ihrem Wanderer -Konto aus",
+    "sport_type": "Sportart",
+    "sport_type_placeholder": "Trailrunning",
+    "start_lat": "Breitengrad beginnen",
+    "start_lng": "Länge beginnen",
+    "strava_activities_during_visit": "Strava -Aktivitäten während des Besuchs",
+    "strava_activity_ready": "Strava -Aktivität bereit",
+    "time": "Zeit",
+    "total_covered": "Gesamt abgedeckt",
+    "total_recorded": "Insgesamt aufgezeichnet",
+    "trail": "Pfad",
+    "trail_created_successfully": "Trail erfolgreich geschaffen",
+    "trail_creation_failed": "Versäumnis, Trail zu erstellen",
+    "trail_fetch_failed": "Versäumte, Wanderwege zu holen",
+    "trail_link_required": "Ein Trail -Link ist erforderlich",
+    "trail_name": "Trailname",
+    "trail_removal_failed": "Trail nicht entfernen",
+    "trail_removed_successfully": "Trail erfolgreich entfernt",
+    "trail_update_failed": "Fehlgeschlagen, Trail zu aktualisieren",
+    "trail_updated_successfully": "Trail erfolgreich aktualisiert",
+    "trails": "Wanderwege",
+    "trails_found_for": "Wege gefunden für",
+    "trails_management": "Trails Management",
+    "upload_first_attachment": "Laden Sie Ihren ersten Anhang mit den obigen Optionen hoch",
+    "upload_first_image": "Laden Sie Ihr erstes Bild mit einer der oben genannten Optionen hoch",
+    "upload_from_device": "Hochladen vom Gerät hoch",
+    "upload_from_url": "Hochladen von der URL",
+    "upload_gpx_file": "Laden Sie die GPX -Datei hoch, die gerade heruntergeladen wurde, um den Strava -Import abzuschließen",
+    "uploading": "Hochladen",
+    "use_current_location": "Verwenden Sie den aktuellen Standort",
+    "view_gpx": "GPX anzeigen",
+    "view_on": "Blick auf",
+    "view_strava_activities": "STRAVA -Aktivitäten anzeigen",
+    "view_trail": "Wanderweg anzeigen",
+    "wanderer_integration_error": "Wanderer -Integration ist nicht aktiviert oder ist abgelaufen.",
+    "wikipedia_error": "Ich habe keine Beschreibung von Wikipedia generiert",
+    "add_new_trail": "Fügen Sie einen neuen Weg hinzu",
+    "trails_management_description": "Verwalten Sie mit diesem Ort verbundene Trails. \nTrails können mit externen Diensten wie Alltrails oder Link zu Wanderer -Trails verknüpft werden.",
+    "update_location_details": "Standortdetails aktualisieren",
+    "update_visit": "Aktualisieren Sie den Besuch",
+    "upload_activity": "Aktivität hochladen",
+    "upload_attachment": "Laden Sie den Anhang hoch"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mühelos",
@@ -399,7 +532,8 @@
     "oldest_first": "Älteste zuerst",
     "unvisited_first": "Zuerst nicht besucht",
     "visited_first": "Zuerst besucht",
-    "total_items": "Gesamtartikel"
+    "total_items": "Gesamtartikel",
+    "getting_location_details": "Standortdetails erhalten"
   },
   "settings": {
     "account_settings": "Benutzerkonto",
@@ -802,7 +936,8 @@
     "disconnected": "Erfolgreich von Strava getrennt von Strawa",
     "not_configured": "Strava nicht konfiguriert",
     "ready_to_connect": "Herstellen zu verbinden",
-    "strava_integration_desc": "Stellen Sie eine Verbindung zu Strava her, um Ihre Aktivitäten einfach in Orte und Besuche zu importieren"
+    "strava_integration_desc": "Stellen Sie eine Verbindung zu Strava her, um Ihre Aktivitäten einfach in Orte und Besuche zu importieren",
+    "gpx_required": "Bitte laden Sie die GPX -Datei hoch, um den Strava -Import zu vervollständigen"
   },
   "wanderer": {
     "connected": "Erfolgreich mit Wanderer verbunden",
