--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -318,7 +318,140 @@
     "leave_collection_warning": "¿Estás seguro de que quieres dejar esta colección? \nCualquier ubicación que agregó no estará vinculado y permanecerá en su cuenta.",
     "left_collection_message": "Colección de izquierda con éxito",
     "loading_collections": "Cargando colecciones ...",
-    "quick_start": "Comienzo rápido"
+    "quick_start": "Comienzo rápido",
+    "click_map": "Haga clic en el mapa para seleccionar una ubicación",
+    "continue": "Continuar",
+    "getting_location_details": "Obtener detalles de ubicación",
+    "location_selected": "Ubicación seleccionada",
+    "search_location": "Buscar una ubicación",
+    "search_placeholder": "Ingrese a la ciudad, ubicación o punto de referencia ...",
+    "searching": "Búsqueda",
+    "select_on_map": "Seleccionar en el mapa",
+    "use_current_location": "Utilice la ubicación actual",
+    "create_new_location": "Crear nueva ubicación",
+    "update_location_details": "Actualizar detalles de ubicación",
+    "back": "Atrás",
+    "click_on_map": "Haga clic en el mapa para seleccionar una ubicación",
+    "location_display_name": "Nombre de la pantalla de ubicación",
+    "location_map": "Ubicación",
+    "or": "O",
+    "processing": "Tratamiento",
+    "public_location_description": "Haga que esta ubicación sea visible para otros usuarios",
+    "wikipedia_error": "No se pudo generar una descripción de Wikipedia",
+    "add_first_trail": "Agregue su primera ruta con el botón de arriba",
+    "add_new_trail": "Agregar nuevo sendero",
+    "add_wanderer_trail": "Agregar sendero Wanderer",
+    "attachment_management": "Gestión de adjuntos",
+    "attachment_name_required": "Nombre de archivo adjunto requerido",
+    "attachment_remove_error": "Se produjo un error al eliminar el archivo adjunto",
+    "attachment_removed": "Adjunto eliminado con éxito",
+    "attachment_updated": "Adjunto actualizado con éxito",
+    "create_trail": "Crear rastro",
+    "image_management": "Gestión de imágenes",
+    "no_attachments_uploaded_yet": "No hay archivos adjuntos cargados todavía",
+    "no_external_link": "No hay enlace externo disponible",
+    "no_file_selected": "No hay archivo seleccionado",
+    "no_images_uploaded_yet": "No hay imágenes cargadas todavía",
+    "no_trails_added": "Todavía no se agregan senderos",
+    "no_trails_available": "No hay senderos disponibles",
+    "no_trails_found_matching": "No se encontraron senderos coincidentes",
+    "select_wanderer_trail": "Seleccione un sendero de su cuenta de Wanderer",
+    "trail_created_successfully": "Sendero creado con éxito",
+    "trail_creation_failed": "No se pudo crear un sendero",
+    "trail_fetch_failed": "No se pudo buscar senderos de Wanderer",
+    "trail_link_required": "Se requiere un enlace de sendero",
+    "trail_removal_failed": "No se pudo quitar el sendero",
+    "trail_removed_successfully": "Sendero eliminado con éxito",
+    "trail_update_failed": "No se pudo actualizar el sendero",
+    "trail_updated_successfully": "Sendero actualizado con éxito",
+    "trails_found_for": "senderos encontrados para",
+    "trails_management": "Gestión de senderos",
+    "trails_management_description": "Administre los senderos asociados con esta ubicación. \nLos senderos se pueden vincular a servicios externos como Alltrails o Link a Wanderer Trails.",
+    "upload_attachment": "Subir el archivo adjunto",
+    "upload_first_attachment": "Cargue su primer archivo adjunto utilizando las opciones anteriores",
+    "upload_first_image": "Sube tu primera imagen usando una de las opciones de arriba",
+    "upload_from_device": "Cargar desde el dispositivo",
+    "upload_from_url": "Subir desde URL",
+    "wanderer_integration_error": "La integración de Wanderer no está habilitada o ha expirado.",
+    "external_link": "Enlace externo",
+    "search_trails_placeholder": "Búsqueda de senderos por nombre",
+    "trail_name": "Nombre de sendero",
+    "add_trail": "Agregar rastro",
+    "achievements": "Logros",
+    "activity_options": "Opciones de actividad",
+    "avg_speed": "Velocidad promedio",
+    "cadence": "Cadencia",
+    "calories": "Calorías",
+    "created": "Creado",
+    "elevation": "Elevación",
+    "export_gpx": "GPX de exportación",
+    "export_original": "Exportar original",
+    "gain": "ganar",
+    "import_activity": "Actividad de importación",
+    "likes": "Gustos",
+    "max_speed": "Velocidad máxima",
+    "moving_time": "Tiempo de mudanza",
+    "pace": "Paso",
+    "photos": "Fotos",
+    "time": "Tiempo",
+    "trail": "Camino",
+    "view_gpx": "Ver GPX",
+    "view_on": "Ver",
+    "view_trail": "Ver el sendero",
+    "activity_name": "Nombre de actividad",
+    "activity_name_placeholder": "Carrera matutina",
+    "add_new_activity": "Agregar nueva actividad",
+    "average_cadence": "Cadencia promedio",
+    "average_speed": "Velocidad promedio",
+    "complete_import": "Importación completa",
+    "complete_strava_import": "Importación completa de Strava",
+    "date_selection": "Selección de fecha",
+    "elapsed_time": "Tiempo transcurrido",
+    "elevation_gain": "Ganancia de elevación",
+    "elevation_high": "Elevación alta",
+    "elevation_loss": "Pérdida de elevación",
+    "elevation_low": "Elevación baja",
+    "end_lat": "Final de la latitud",
+    "end_lng": "Longitud final",
+    "gpx_file": "Archivo gpx",
+    "gpx_file_downloaded": "Archivo GPX descargado. \nCárguelo a continuación para completar la importación.",
+    "gpx_file_required": "Requerido el archivo GPX",
+    "importing": "Importador",
+    "loading_activities": "Actividades de carga",
+    "next_image": "Siguiente imagen",
+    "no_strava_activities": "No se encontraron actividades de Strava durante esta visita",
+    "no_visits_description": "Cree su primera visita seleccionando las fechas anteriores",
+    "notes_placeholder": "Agregue notas sobre esta visita",
+    "previous_image": "Imagen anterior",
+    "rest_time": "Tiempo de descanso",
+    "saved_activities": "Actividades guardadas",
+    "sport_type": "Tipo deportivo",
+    "sport_type_placeholder": "Sendero",
+    "start_lat": "Iniciar latitud",
+    "start_lng": "Iniciar longitud",
+    "strava_activity_ready": "Strava Activity Ready",
+    "trails": "Senderos",
+    "upload_activity": "Carga de actividad",
+    "upload_gpx_file": "Sube el archivo GPX que se acaba de descargar para completar la importación Strava",
+    "uploading": "Carga",
+    "view_strava_activities": "Ver actividades de Strava",
+    "current_attachments": "Archivos adjuntos actuales",
+    "connect_to_wanderer": "Conéctese con Wanderer",
+    "active_duration": "Duración activa",
+    "activities_name": "Actividades",
+    "activity_statistics": "Estadísticas de actividad",
+    "activity_statistics_description": "Tus logros de aptitud y actividad",
+    "total_covered": "Total cubierto",
+    "total_recorded": "Total registrado",
+    "activity_name_required": "Se requiere el nombre de la actividad",
+    "add_activity": "Agregar actividad",
+    "add_visit": "Agregar visita",
+    "confirm_delete_activity": "¿Estás seguro de que quieres eliminar esta actividad?",
+    "download_gpx": "Descargar GPX",
+    "edit_visit": "Editar visita",
+    "remove_visit": "Eliminar visita",
+    "strava_activities_during_visit": "Actividades de Strava durante la visita",
+    "update_visit": "Visita de actualización"
   },
   "worldtravel": {
     "all": "Todo",
@@ -374,7 +507,8 @@
     "oldest_first": "El más antiguo primero",
     "unvisited_first": "Primero no visitado",
     "visited_first": "Visitado primero",
-    "total_items": "Total de artículos"
+    "total_items": "Total de artículos",
+    "getting_location_details": "Obtener detalles de ubicación"
   },
   "auth": {
     "forgot_password": "¿Has olvidado tu contraseña?",
@@ -802,7 +936,8 @@
     "disconnected": "Desconectado con éxito de Strava",
     "not_configured": "Strava no configurado",
     "ready_to_connect": "Listo para conectarse",
-    "strava_integration_desc": "Conéctese a Strava para importar fácilmente sus actividades a ubicaciones y visitas"
+    "strava_integration_desc": "Conéctese a Strava para importar fácilmente sus actividades a ubicaciones y visitas",
+    "gpx_required": "Sube el archivo GPX para completar la importación de Strava"
   },
   "wanderer": {
     "connected": "Conectado con éxito a Wanderer",
