--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -265,7 +265,140 @@
     "wikipedia": "ウィキペディア",
     "will_be_marked_location": "場所が保存されると、訪問としてマークされます。",
     "collection_remove_location_success": "コレクションから正常に削除された場所！",
-    "my_adventures": "私の冒険"
+    "my_adventures": "私の冒険",
+    "achievements": "成果",
+    "active_duration": "アクティブな期間",
+    "activities_name": "活動",
+    "activity_name": "アクティビティ名",
+    "activity_name_placeholder": "朝の走り",
+    "activity_name_required": "アクティビティ名が必要です",
+    "activity_options": "アクティビティオプション",
+    "activity_statistics": "アクティビティ統計",
+    "activity_statistics_description": "あなたのフィットネスと活動の成果",
+    "add_activity": "アクティビティを追加します",
+    "add_first_trail": "上のボタンを使用して最初のトレイルを追加します",
+    "add_new_activity": "新しいアクティビティを追加します",
+    "add_new_trail": "新しいトレイルを追加します",
+    "add_trail": "トレイルを追加します",
+    "add_visit": "訪問を追加します",
+    "add_wanderer_trail": "ワンダラートレイルを追加します",
+    "attachment_management": "アタッチメント管理",
+    "attachment_name_required": "添付名が必要です",
+    "attachment_remove_error": "添付ファイルの削除中にエラーが発生しました",
+    "attachment_removed": "添付ファイルは正常に削除されました",
+    "attachment_updated": "添付ファイルは正常に更新されました",
+    "average_cadence": "平均的なケイデンス",
+    "average_speed": "平均速度",
+    "avg_speed": "平均速度",
+    "back": "戻る",
+    "cadence": "ケイデンス",
+    "calories": "カロリー",
+    "click_map": "マップをクリックして場所を選択します",
+    "click_on_map": "マップをクリックして場所を選択します",
+    "complete_import": "完全なインポート",
+    "complete_strava_import": "完全なStravaインポート",
+    "confirm_delete_activity": "このアクティビティを削除したいですか？",
+    "connect_to_wanderer": "ワンダラーに接続します",
+    "continue": "続く",
+    "create_new_location": "新しい場所を作成します",
+    "create_trail": "トレイルを作成します",
+    "created": "作成されました",
+    "current_attachments": "現在の添付ファイル",
+    "date_selection": "日付の選択",
+    "download_gpx": "GPXをダウンロードします",
+    "edit_visit": "訪問を編集します",
+    "elapsed_time": "経過時間",
+    "elevation": "標高",
+    "elevation_gain": "標高ゲイン",
+    "elevation_high": "標高高",
+    "elevation_loss": "標高損失",
+    "elevation_low": "標高低い",
+    "end_lat": "緯度を終了します",
+    "end_lng": "経度を終了します",
+    "export_gpx": "gpxをエクスポートします",
+    "export_original": "オリジナルをエクスポートします",
+    "external_link": "外部リンク",
+    "gain": "得",
+    "getting_location_details": "場所の詳細を取得します",
+    "gpx_file": "GPXファイル",
+    "gpx_file_downloaded": "GPXファイルがダウンロードされました。\nインポートを完了するには、以下にアップロードしてください。",
+    "gpx_file_required": "GPXファイルが必要です",
+    "image_management": "画像管理",
+    "import_activity": "インポートアクティビティ",
+    "importing": "インポート",
+    "likes": "いいね",
+    "loading_activities": "読み込みアクティビティ",
+    "location_display_name": "場所ディスプレイ名",
+    "location_map": "位置",
+    "location_selected": "選択した場所",
+    "max_speed": "最大速度",
+    "moving_time": "移動時間",
+    "next_image": "次の画像",
+    "no_attachments_uploaded_yet": "添付ファイルはまだアップロードされていません",
+    "no_external_link": "利用可能な外部リンクはありません",
+    "no_file_selected": "選択されたファイルはありません",
+    "no_images_uploaded_yet": "まだアップロードされている画像はありません",
+    "no_strava_activities": "この訪問中にSTRAVAアクティビティは見つかりませんでした",
+    "no_trails_added": "まだトレイルは追加されていません",
+    "no_trails_available": "利用可能なトレイルはありません",
+    "no_trails_found_matching": "マッチングが見つかりませんでした",
+    "no_visits_description": "上記の日付を選択して、最初の訪問を作成します",
+    "notes_placeholder": "この訪問についてメモを追加します",
+    "or": "または",
+    "pace": "ペース",
+    "photos": "写真",
+    "previous_image": "前の画像",
+    "processing": "処理",
+    "public_location_description": "この場所を他のユーザーに見えるようにします",
+    "remove_visit": "訪問を削除します",
+    "rest_time": "休憩時間",
+    "saved_activities": "保存されたアクティビティ",
+    "search_location": "場所を検索します",
+    "search_placeholder": "都市、場所、またはランドマークを入力してください...",
+    "search_trails_placeholder": "名前でトレイルを検索します",
+    "searching": "検索",
+    "select_on_map": "マップで選択します",
+    "select_wanderer_trail": "放浪者アカウントからトレイルを選択します",
+    "sport_type": "スポーツタイプ",
+    "sport_type_placeholder": "トレイルランニング",
+    "start_lat": "緯度を開始します",
+    "start_lng": "経度を開始します",
+    "strava_activities_during_visit": "訪問中のストラバ活動",
+    "strava_activity_ready": "Stravaアクティビティの準備ができました",
+    "time": "時間",
+    "total_covered": "総カバー",
+    "total_recorded": "総記録",
+    "trail": "トレイル",
+    "trail_created_successfully": "トレイルは正常に作成されました",
+    "trail_creation_failed": "トレイルの作成に失敗しました",
+    "trail_fetch_failed": "ワンダラートレイルを取得できませんでした",
+    "trail_link_required": "トレイルリンクが必要です",
+    "trail_name": "トレイル名",
+    "trail_removal_failed": "トレイルを削除できませんでした",
+    "trail_removed_successfully": "トレイルは正常に削除されました",
+    "trail_update_failed": "トレイルの更新に失敗しました",
+    "trail_updated_successfully": "トレイルは正常に更新されました",
+    "trails": "トレイル",
+    "trails_found_for": "のトレイルが見つかりました",
+    "trails_management": "トレイル管理",
+    "trails_management_description": "この場所に関連するトレイルを管理します。\nトレイルは、Alltrailsのような外部サービスやワンダラートレイルへのリンクにリンクできます。",
+    "update_location_details": "場所の詳細を更新します",
+    "update_visit": "訪問を更新します",
+    "upload_activity": "アクティビティをアップロードします",
+    "upload_attachment": "添付ファイルをアップロードします",
+    "upload_first_attachment": "上記のオプションを使用して、最初の添付ファイルをアップロードします",
+    "upload_first_image": "上記のオプションのいずれかを使用して最初の画像をアップロードします",
+    "upload_from_device": "デバイスからアップロードします",
+    "upload_from_url": "URLからアップロードします",
+    "upload_gpx_file": "Stravaのインポートを完了するためにダウンロードされたばかりのGPXファイルをアップロードします",
+    "uploading": "アップロード",
+    "use_current_location": "現在の場所を使用します",
+    "view_gpx": "GPXを表示します",
+    "view_on": "表示",
+    "view_strava_activities": "ストラバアクティビティを表示します",
+    "view_trail": "トレイルを表示します",
+    "wanderer_integration_error": "ワンダラーの統合は有効になっていないか、有効期限が切れていません。",
+    "wikipedia_error": "ウィキペディアから説明を生成できませんでした"
   },
   "auth": {
     "confirm_password": "パスワードを認証する",
@@ -717,7 +850,8 @@
     "disconnected": "Stravaから正常に切断されました",
     "not_configured": "Stravaが構成されていません",
     "ready_to_connect": "接続する準備ができました",
-    "strava_integration_desc": "Stravaに接続して、アクティビティを場所や訪問に簡単にインポートする"
+    "strava_integration_desc": "Stravaに接続して、アクティビティを場所や訪問に簡単にインポートする",
+    "gpx_required": "GPXファイルをアップロードして、STRAVAインポートを完了してください"
   },
   "transportation": {
     "edit": "編集",
@@ -805,6 +939,7 @@
     "view_cities": "都市を見る",
     "visit_remove_failed": "訪問を削除できませんでした",
     "visit_to": "訪問",
-    "visited_first": "最初に訪問しました"
+    "visited_first": "最初に訪問しました",
+    "getting_location_details": "場所の詳細を取得します"
   }
 }
