--- a/frontend/src/locales/no.json
+++ b/frontend/src/locales/no.json
@@ -318,7 +318,140 @@
     "leave_collection_warning": "Er du sikker på at du vil forlate denne samlingen? \nEventuelle steder du har lagt til, vil bli koblet til og forblir på kontoen din.",
     "left_collection_message": "Vellykket igjen samling",
     "loading_collections": "Laster inn samlinger ...",
-    "quick_start": "Rask start"
+    "quick_start": "Rask start",
+    "achievements": "Prestasjoner",
+    "active_duration": "Aktiv varighet",
+    "activities_name": "Aktiviteter",
+    "activity_name": "Aktivitetsnavn",
+    "activity_name_placeholder": "Morgenløp",
+    "activity_name_required": "Aktivitetsnavn er påkrevd",
+    "activity_options": "Aktivitetsalternativer",
+    "activity_statistics": "Aktivitetsstatistikk",
+    "activity_statistics_description": "Din kondisjon og aktivitetsprestasjoner",
+    "add_activity": "Legg til aktivitet",
+    "add_first_trail": "Legg til den første løypa ved hjelp av knappen over",
+    "add_new_activity": "Legg til ny aktivitet",
+    "add_new_trail": "Legg til ny sti",
+    "add_trail": "Legg til løype",
+    "add_visit": "Legg til besøk",
+    "add_wanderer_trail": "Legg til Wanderer Trail",
+    "attachment_management": "Vedleggsstyring",
+    "attachment_name_required": "Vedleggsnavn påkrevd",
+    "attachment_remove_error": "Det oppsto en feil mens du fjernet festet",
+    "attachment_removed": "Vedlegg fjernet med hell",
+    "attachment_updated": "Vedlegg oppdatert vellykket",
+    "average_cadence": "Gjennomsnittlig kadens",
+    "average_speed": "Gjennomsnittlig hastighet",
+    "avg_speed": "Gjennomsnittlig hastighet",
+    "back": "Tilbake",
+    "cadence": "Kadens",
+    "calories": "Kalorier",
+    "click_map": "Klikk på kartet for å velge et sted",
+    "click_on_map": "Klikk på kartet for å velge et sted",
+    "complete_import": "Fullstendig import",
+    "complete_strava_import": "Komplett Strava -import",
+    "confirm_delete_activity": "Er du sikker på at du vil slette denne aktiviteten?",
+    "connect_to_wanderer": "Koble til Wanderer",
+    "continue": "Fortsette",
+    "create_new_location": "Opprett ny sted",
+    "create_trail": "Lag løype",
+    "created": "Opprettet",
+    "current_attachments": "Gjeldende vedlegg",
+    "date_selection": "Dato valg",
+    "download_gpx": "Last ned GPX",
+    "edit_visit": "Rediger besøk",
+    "elapsed_time": "Går tid",
+    "elevation": "Høyde",
+    "elevation_gain": "Høyningsgevinst",
+    "elevation_high": "Høyden høy",
+    "elevation_loss": "Høydeap",
+    "elevation_low": "Høyden lav",
+    "end_lat": "Slutt breddegrad",
+    "end_lng": "Slutt lengdegrad",
+    "export_gpx": "Eksport GPX",
+    "export_original": "Eksporter original",
+    "external_link": "Ekstern lenke",
+    "gain": "gevinst",
+    "getting_location_details": "Få stedsdetaljer",
+    "gpx_file": "GPX -fil",
+    "gpx_file_downloaded": "GPX -fil lastet ned. \nLast den opp nedenfor for å fullføre importen.",
+    "gpx_file_required": "GPX -fil som kreves",
+    "image_management": "Bildeadministrasjon",
+    "import_activity": "Importaktivitet",
+    "importing": "Import",
+    "likes": "Liker",
+    "loading_activities": "Laster aktiviteter",
+    "location_display_name": "Plassering av visningsnavn",
+    "location_map": "Sted",
+    "location_selected": "Plassering valgt",
+    "max_speed": "Maks hastighet",
+    "moving_time": "Bevegelige tid",
+    "next_image": "Neste bilde",
+    "no_attachments_uploaded_yet": "Ingen vedlegg lastet opp ennå",
+    "no_external_link": "Ingen ekstern lenke tilgjengelig",
+    "no_file_selected": "Ingen fil valgt",
+    "no_images_uploaded_yet": "Ingen bilder lastet opp ennå",
+    "no_strava_activities": "Ingen Strava -aktiviteter funnet under dette besøket",
+    "no_trails_added": "Ingen stier lagt til ennå",
+    "no_trails_available": "Ingen stier tilgjengelig",
+    "no_trails_found_matching": "Ingen stier fant matching",
+    "no_visits_description": "Lag ditt første besøk ved å velge datoer ovenfor",
+    "notes_placeholder": "Legg til notater om dette besøket",
+    "or": "ELLER",
+    "pace": "Tempo",
+    "photos": "Bilder",
+    "previous_image": "Forrige bilde",
+    "processing": "Behandling",
+    "public_location_description": "Gjøre dette stedet synlig for andre brukere",
+    "remove_visit": "Fjern besøket",
+    "rest_time": "Hviletid",
+    "saved_activities": "Lagrede aktiviteter",
+    "search_location": "Søk etter et sted",
+    "search_placeholder": "Gå inn i by, beliggenhet eller landemerke ...",
+    "search_trails_placeholder": "Søk stier etter navn",
+    "searching": "Søker",
+    "select_on_map": "Velg på MAP",
+    "select_wanderer_trail": "Velg en sti fra Wanderer -kontoen din",
+    "sport_type": "Sportstype",
+    "sport_type_placeholder": "Løypekjøring",
+    "start_lat": "Start breddegrad",
+    "start_lng": "Start lengdegrad",
+    "strava_activities_during_visit": "Strava -aktiviteter under besøket",
+    "strava_activity_ready": "Strava -aktivitet klar",
+    "time": "Tid",
+    "total_covered": "Total dekket",
+    "total_recorded": "Totalt registrert",
+    "trail": "Sti",
+    "trail_created_successfully": "Løype opprettet med hell",
+    "trail_creation_failed": "Kunne ikke lage løype",
+    "trail_fetch_failed": "Kunne ikke hente vandrerstier",
+    "trail_link_required": "Det kreves en løypeforbindelse",
+    "trail_name": "Trailnavn",
+    "trail_removal_failed": "Kunne ikke fjerne løypa",
+    "trail_removed_successfully": "Trail fjernet med hell",
+    "trail_update_failed": "Kunne ikke oppdatere løypa",
+    "trail_updated_successfully": "Trail oppdatert vellykket",
+    "trails": "Stier",
+    "trails_found_for": "Stier funnet for",
+    "trails_management": "Trails Management",
+    "trails_management_description": "Administrer stier tilknyttet dette stedet. \nStier kan knyttes til eksterne tjenester som AllTrails eller lenke til Wanderer Trails.",
+    "update_location_details": "Oppdater plasseringsdetaljer",
+    "update_visit": "Oppdateringsbesøk",
+    "upload_activity": "Last opp aktivitet",
+    "upload_attachment": "Last opp vedlegg",
+    "upload_first_attachment": "Last opp ditt første vedlegg ved hjelp av alternativene ovenfor",
+    "upload_first_image": "Last opp det første bildet ditt ved å bruke et av alternativene ovenfor",
+    "upload_from_device": "Last opp fra enheten",
+    "upload_from_url": "Last opp fra URL",
+    "upload_gpx_file": "Last opp GPX -filen som nettopp ble lastet ned for å fullføre Strava -importen",
+    "uploading": "Last opp",
+    "use_current_location": "Bruk gjeldende plassering",
+    "view_gpx": "Se GPX",
+    "view_on": "Se på",
+    "view_strava_activities": "Se Strava -aktiviteter",
+    "view_trail": "Utsikt Trail",
+    "wanderer_integration_error": "Wanderer -integrasjon er ikke aktivert eller har utløpt.",
+    "wikipedia_error": "Kunne ikke generere beskrivelse fra Wikipedia"
   },
   "worldtravel": {
     "country_list": "Liste over land",
@@ -374,7 +507,8 @@
     "oldest_first": "Eldste først",
     "unvisited_first": "Uvisitert først",
     "visited_first": "Besøkte først",
-    "total_items": "Totalt gjenstander"
+    "total_items": "Totalt gjenstander",
+    "getting_location_details": "Få stedsdetaljer"
   },
   "auth": {
     "username": "Brukernavn",
@@ -802,7 +936,8 @@
     "disconnected": "Vellykket koblet fra Strava",
     "not_configured": "Strava ikke konfigurert",
     "ready_to_connect": "Klar til å koble til",
-    "strava_integration_desc": "Koble til Strava for enkelt å importere aktivitetene dine til steder og besøk"
+    "strava_integration_desc": "Koble til Strava for enkelt å importere aktivitetene dine til steder og besøk",
+    "gpx_required": "Last opp GPX -filen for å fullføre Strava -importen"
   },
   "wanderer": {
     "connected": "Vellykket koblet til vandrer",
