--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -318,7 +318,140 @@
     "leave_collection_warning": "Вы уверены, что хотите покинуть эту коллекцию? \nЛюбые места, которые вы добавили, будут не связаны и останутся в вашей учетной записи.",
     "left_collection_message": "Успешно оставил коллекцию",
     "loading_collections": "Загрузка коллекций ...",
-    "quick_start": "Быстрый старт"
+    "quick_start": "Быстрый старт",
+    "achievements": "Достижения",
+    "active_duration": "Активная продолжительность",
+    "activities_name": "Деятельность",
+    "activity_name": "Имя деятельности",
+    "activity_name_placeholder": "Утренняя пробежка",
+    "activity_name_required": "Требуется имя деятельности",
+    "activity_options": "Варианты деятельности",
+    "activity_statistics": "Статистика деятельности",
+    "activity_statistics_description": "Ваши достижения в области фитнеса и активности",
+    "add_activity": "Добавить деятельность",
+    "add_first_trail": "Добавьте свой первый след, используя кнопку выше",
+    "add_new_activity": "Добавить новую деятельность",
+    "add_new_trail": "Добавить новую тропу",
+    "add_trail": "Добавить след",
+    "add_visit": "Добавить визит",
+    "add_wanderer_trail": "Добавить тропу Странника",
+    "attachment_management": "Управление привязанностью",
+    "attachment_name_required": "Требуется имя вложения",
+    "attachment_remove_error": "Произошла ошибка при удалении вложения",
+    "attachment_removed": "Приложение удалено успешно",
+    "attachment_updated": "Вложение успешно обновлено",
+    "average_cadence": "Средняя каденция",
+    "average_speed": "Средняя скорость",
+    "avg_speed": "Средняя скорость",
+    "back": "Назад",
+    "cadence": "Каденция",
+    "calories": "Калории",
+    "click_map": "Нажмите на карту, чтобы выбрать местоположение",
+    "click_on_map": "Нажмите на карту, чтобы выбрать местоположение",
+    "complete_import": "Полный импорт",
+    "complete_strava_import": "Полный импорт Strava",
+    "confirm_delete_activity": "Вы уверены, что хотите удалить это занятие?",
+    "connect_to_wanderer": "Подключитесь к Wanderer",
+    "continue": "Продолжать",
+    "create_new_location": "Создайте новое место",
+    "create_trail": "Создать след",
+    "created": "Созданный",
+    "current_attachments": "Текущие вложения",
+    "date_selection": "Выбор даты",
+    "download_gpx": "Скачать gpx",
+    "edit_visit": "Редактировать посещение",
+    "elapsed_time": "Прошло время",
+    "elevation": "Возвышение",
+    "elevation_gain": "Увеличение возвышения",
+    "elevation_high": "Высота высота",
+    "elevation_loss": "Потеря высоты",
+    "elevation_low": "Высота",
+    "end_lat": "Конец широты",
+    "end_lng": "Конец долготы",
+    "export_gpx": "Экспорт GPX",
+    "export_original": "Экспорт оригинал",
+    "external_link": "Внешняя ссылка",
+    "gain": "прирост",
+    "getting_location_details": "Получение деталей местоположения",
+    "gpx_file": "Файл gpx",
+    "gpx_file_downloaded": "Файл gpx загружен. \nПожалуйста, загрузите его ниже, чтобы завершить импорт.",
+    "gpx_file_required": "Требуется файл GPX",
+    "image_management": "Управление изображением",
+    "import_activity": "Импортная деятельность",
+    "importing": "Импорт",
+    "likes": "Лайки",
+    "loading_activities": "Погрузка",
+    "location_display_name": "Отображение местоположения",
+    "location_map": "Расположение",
+    "location_selected": "Местоположение выбрано",
+    "max_speed": "Максимальная скорость",
+    "moving_time": "Время движения",
+    "next_image": "Следующее изображение",
+    "no_attachments_uploaded_yet": "Пока не загружены вложения",
+    "no_external_link": "Внешнее внешнее ссылка",
+    "no_file_selected": "Файл не выбран",
+    "no_images_uploaded_yet": "Пока не загружены изображения",
+    "no_strava_activities": "Во время этого визита не было найдено мероприятий Strava",
+    "no_trails_added": "Пока не добавили тропы",
+    "no_trails_available": "Нет тропинок",
+    "no_trails_found_matching": "Трейлей не найдено подходящими",
+    "no_visits_description": "Создайте свой первый посещение, выбрав даты выше",
+    "notes_placeholder": "Добавить заметки об этом визите",
+    "or": "ИЛИ",
+    "pace": "Шаг",
+    "photos": "Фото",
+    "previous_image": "Предыдущее изображение",
+    "processing": "Обработка",
+    "public_location_description": "Сделайте это место видимым другим пользователям",
+    "remove_visit": "Удалить посещение",
+    "rest_time": "Время отдыха",
+    "saved_activities": "Спасенные действия",
+    "search_location": "Поиск места",
+    "search_placeholder": "Войдите в город, место или достопримечательность ...",
+    "search_trails_placeholder": "Поисковые следы по имени",
+    "searching": "Идет поиск",
+    "select_on_map": "Выберите на карте",
+    "select_wanderer_trail": "Выберите след из своей учетной записи Wanderer",
+    "sport_type": "Спортивный тип",
+    "sport_type_placeholder": "Тропа бег",
+    "start_lat": "Запустить широту",
+    "start_lng": "Начните долготу",
+    "strava_activities_during_visit": "Мероприятия Strava во время визита",
+    "strava_activity_ready": "Страва готова",
+    "time": "Время",
+    "total_covered": "Общее покрытие",
+    "total_recorded": "Всего записано",
+    "trail": "Тащить",
+    "trail_created_successfully": "Тропа создала успешно",
+    "trail_creation_failed": "Не удалось создать след",
+    "trail_fetch_failed": "Не удалось принести тропы Странника",
+    "trail_link_required": "Требуется ссылка на след",
+    "trail_name": "Название тропы",
+    "trail_removal_failed": "Не удалось снять след",
+    "trail_removed_successfully": "Тропа успешно удален",
+    "trail_update_failed": "Не удалось обновить след",
+    "trail_updated_successfully": "Тропа обновлен успешно",
+    "trails": "Тропы",
+    "trails_found_for": "Тропы найдены для",
+    "trails_management": "Управление тропами",
+    "trails_management_description": "Управление трассами, связанными с этим местом. \nСледы могут быть связаны с внешними услугами, такими как Alltrails или ссылка на Trails Wanderer.",
+    "update_location_details": "Обновление сведений о местоположении",
+    "update_visit": "Обновить посещение",
+    "upload_activity": "Загрузка активности",
+    "upload_attachment": "Загрузите вложение",
+    "upload_first_attachment": "Загрузите свое первое вложение, используя приведенные выше параметры",
+    "upload_first_image": "Загрузите свое первое изображение, используя один из вариантов выше",
+    "upload_from_device": "Загрузить с устройства",
+    "upload_from_url": "Загрузите из URL",
+    "upload_gpx_file": "Загрузите файл GPX, который был только что загружен, чтобы завершить импорт Strava",
+    "uploading": "Загрузка",
+    "use_current_location": "Используйте текущее местоположение",
+    "view_gpx": "Посмотреть GPX",
+    "view_on": "Посмотреть на",
+    "view_strava_activities": "Посмотреть мероприятия Strava",
+    "view_trail": "Посмотреть след",
+    "wanderer_integration_error": "Интеграция Wanderer не включена или истек.",
+    "wikipedia_error": "Не удалось получить описание из Википедии"
   },
   "worldtravel": {
     "country_list": "Список стран",
@@ -374,7 +507,8 @@
     "oldest_first": "Сначала старейший",
     "unvisited_first": "Не заселяется первым",
     "visited_first": "Посетил первым",
-    "total_items": "Общие предметы"
+    "total_items": "Общие предметы",
+    "getting_location_details": "Получение деталей местоположения"
   },
   "auth": {
     "username": "Имя пользователя",
@@ -802,7 +936,8 @@
     "disconnected": "Успешно отключен от Strava",
     "not_configured": "Страва не настроен",
     "ready_to_connect": "Готов к подключению",
-    "strava_integration_desc": "Подключитесь к Strava, чтобы легко импортировать ваши активации в места и посещения"
+    "strava_integration_desc": "Подключитесь к Strava, чтобы легко импортировать ваши активации в места и посещения",
+    "gpx_required": "Пожалуйста, загрузите файл GPX, чтобы завершить импорт Strava"
   },
   "wanderer": {
     "connected": "Успешно связанный с Wanderer",
