--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -266,7 +266,140 @@
     "leave_collection_warning": "Är du säker på att du vill lämna den här samlingen? \nAlla platser du har lagt till kommer att vara länkade och stanna kvar på ditt konto.",
     "left_collection_message": "Framgångsrikt lämnade samlingen",
     "loading_collections": "Laddar samlingar ...",
-    "quick_start": "Snabbstart"
+    "quick_start": "Snabbstart",
+    "achievements": "Framsteg",
+    "active_duration": "Aktiv varaktighet",
+    "activities_name": "Aktiviteter",
+    "activity_name": "Aktivitetsnamn",
+    "activity_name_placeholder": "Morgonsörning",
+    "activity_name_required": "Aktivitetsnamn krävs",
+    "activity_options": "Aktivitetsalternativ",
+    "activity_statistics": "Aktivitetsstatistik",
+    "activity_statistics_description": "Dina fitness- och aktivitetsresultat",
+    "add_activity": "Lägga till aktivitet",
+    "add_first_trail": "Lägg till ditt första spår med knappen ovan",
+    "add_new_activity": "Lägg till ny aktivitet",
+    "add_new_trail": "Lägg till nytt spår",
+    "add_trail": "Lägga till spår",
+    "add_visit": "Lägga till besök",
+    "add_wanderer_trail": "Lägg till Wanderer Trail",
+    "attachment_management": "Anknytningshantering",
+    "attachment_name_required": "Bifogningsnamn krävs",
+    "attachment_remove_error": "Ett fel inträffade under att ta bort bilagan",
+    "attachment_removed": "Bilaget tagits bort framgångsrikt",
+    "attachment_updated": "Bilaga uppdateras framgångsrikt",
+    "average_cadence": "Genomsnittlig kadens",
+    "average_speed": "Medelhastighet",
+    "avg_speed": "Medelhastighet",
+    "back": "Tillbaka",
+    "cadence": "Kadens",
+    "calories": "Kalorier",
+    "click_map": "Klicka på kartan för att välja en plats",
+    "click_on_map": "Klicka på kartan för att välja en plats",
+    "complete_import": "Komplett import",
+    "complete_strava_import": "Komplett Strava -import",
+    "confirm_delete_activity": "Är du säker på att du vill ta bort den här aktiviteten?",
+    "connect_to_wanderer": "Anslut till Wanderer",
+    "continue": "Fortsätta",
+    "create_new_location": "Skapa en ny plats",
+    "create_trail": "Skapa spår",
+    "created": "Skapad",
+    "current_attachments": "Aktuella bilagor",
+    "date_selection": "Datumval",
+    "download_gpx": "Ladda ner gpx",
+    "edit_visit": "Redigera besök",
+    "elapsed_time": "Förfluten tid",
+    "elevation": "Elevation",
+    "elevation_gain": "Höjdförstärkning",
+    "elevation_high": "Höjd hög",
+    "elevation_loss": "Höjdförlust",
+    "elevation_low": "Höjd låg",
+    "end_lat": "Sluttning",
+    "end_lng": "Slutlongitud",
+    "export_gpx": "Export GPX",
+    "export_original": "Exportera original",
+    "external_link": "Extern länk",
+    "gain": "få",
+    "getting_location_details": "Få platsinformation",
+    "gpx_file": "GPX -fil",
+    "gpx_file_downloaded": "GPX -fil nedladdad. \nLadda upp den nedan för att slutföra importen.",
+    "gpx_file_required": "GPX -fil krävs",
+    "image_management": "Bildhantering",
+    "import_activity": "Importaktivitet",
+    "importing": "Importerande",
+    "likes": "Gillar",
+    "loading_activities": "Lastningsaktiviteter",
+    "location_display_name": "Platsdisplaynamn",
+    "location_map": "Plats",
+    "location_selected": "Plats vald",
+    "max_speed": "Maxhastighet",
+    "moving_time": "Flyttningstid",
+    "next_image": "Nästa bild",
+    "no_attachments_uploaded_yet": "Inga bilagor laddas upp än",
+    "no_external_link": "Ingen extern länk tillgänglig",
+    "no_file_selected": "Ingen fil vald",
+    "no_images_uploaded_yet": "Inga bilder laddas upp än",
+    "no_strava_activities": "Inga Strava -aktiviteter hittades under detta besök",
+    "no_trails_added": "Inga spår tillagda än",
+    "no_trails_available": "Inga spår tillgängliga",
+    "no_trails_found_matching": "Inga spår hittades matchande",
+    "no_visits_description": "Skapa ditt första besök genom att välja datum ovan",
+    "notes_placeholder": "Lägg till anteckningar om detta besök",
+    "or": "ELLER",
+    "pace": "Takt",
+    "photos": "Foton",
+    "previous_image": "Föregående bild",
+    "processing": "Bearbetning",
+    "public_location_description": "Gör den här platsen synlig för andra användare",
+    "remove_visit": "Ta bort besöket",
+    "rest_time": "Vilotid",
+    "saved_activities": "Sparade aktiviteter",
+    "search_location": "Sök efter en plats",
+    "search_placeholder": "Ange stad, plats eller landmärke ...",
+    "search_trails_placeholder": "Sökspår med namn",
+    "searching": "Sökande",
+    "select_on_map": "Välj på kartan",
+    "select_wanderer_trail": "Välj ett spår från ditt Wanderer -konto",
+    "sport_type": "Sporttyp",
+    "sport_type_placeholder": "Spårlöpning",
+    "start_lat": "Börja latitud",
+    "start_lng": "Starta longitud",
+    "strava_activities_during_visit": "Strava -aktiviteter under besöket",
+    "strava_activity_ready": "Strava -aktivitet redo",
+    "time": "Tid",
+    "total_covered": "Total täckt",
+    "total_recorded": "Total inspelad",
+    "trail": "Spår",
+    "trail_created_successfully": "Spår skapades framgångsrikt",
+    "trail_creation_failed": "Det gick inte att skapa spår",
+    "trail_fetch_failed": "Det gick inte att hämta vandrare spår",
+    "trail_link_required": "En spårlänk krävs",
+    "trail_name": "Spårnamn",
+    "trail_removal_failed": "Det gick inte att ta bort spåret",
+    "trail_removed_successfully": "Trail tog bort framgångsrikt",
+    "trail_update_failed": "Det gick inte att uppdatera spåret",
+    "trail_updated_successfully": "Spår uppdateras framgångsrikt",
+    "trails": "Spår",
+    "trails_found_for": "spår som finns för",
+    "trails_management": "Spårhantering",
+    "trails_management_description": "Hantera spår associerade med den här platsen. \nSpår kan kopplas till externa tjänster som AllTrails eller länk till Wanderer Trails.",
+    "update_location_details": "Uppdatera platsinformation",
+    "update_visit": "Uppdatera besöket",
+    "upload_activity": "Uppladdningsaktivitet",
+    "upload_attachment": "Ladda upp bilagan",
+    "upload_first_attachment": "Ladda upp din första bilaga med alternativen ovan",
+    "upload_first_image": "Ladda upp din första bild med ett av alternativen ovan",
+    "upload_from_device": "Ladda upp från enheten",
+    "upload_from_url": "Ladda upp från URL",
+    "upload_gpx_file": "Ladda upp GPX -filen som just laddades ner för att slutföra Strava -importen",
+    "uploading": "Uppladdning",
+    "use_current_location": "Använd nuvarande plats",
+    "view_gpx": "Visa GPX",
+    "view_on": "Se på",
+    "view_strava_activities": "Se Strava -aktiviteter",
+    "view_trail": "Utsiktspår",
+    "wanderer_integration_error": "Wanderer -integration är inte aktiverad eller har löpt ut.",
+    "wikipedia_error": "Det gick inte att generera beskrivning från Wikipedia"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -374,7 +507,8 @@
     "oldest_first": "Äldsta först",
     "unvisited_first": "Oöverträffad först",
     "visited_first": "Besökt först",
-    "total_items": "Totala artiklar"
+    "total_items": "Totala artiklar",
+    "getting_location_details": "Få platsinformation"
   },
   "auth": {
     "confirm_password": "Bekräfta lösenord",
@@ -802,7 +936,8 @@
     "disconnected": "Framgångsrikt kopplad från Strava",
     "not_configured": "Strava inte konfigurerad",
     "ready_to_connect": "Redo att ansluta",
-    "strava_integration_desc": "Anslut till Strava för att enkelt importera dina aktiviteter till platser och besök"
+    "strava_integration_desc": "Anslut till Strava för att enkelt importera dina aktiviteter till platser och besök",
+    "gpx_required": "Ladda upp GPX -filen för att slutföra Strava -importen"
   },
   "wanderer": {
     "connected": "Framgångsrikt ansluten till vandrare",
