--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -266,7 +266,140 @@
     "leave_collection_warning": "Êtes-vous sûr de vouloir quitter cette collection? \nTous les emplacements que vous avez ajoutés seront non liés et resteront dans votre compte.",
     "left_collection_message": "Collection de gauche avec succès",
     "loading_collections": "Chargement des collections ...",
-    "quick_start": "Démarrage rapide"
+    "quick_start": "Démarrage rapide",
+    "achievements": "Réalisations",
+    "active_duration": "Durée active",
+    "activities_name": "Activités",
+    "activity_name": "Nom d'activité",
+    "activity_name_placeholder": "Run du matin",
+    "activity_name_required": "Le nom d'activité est requis",
+    "activity_options": "Options d'activité",
+    "activity_statistics": "Statistiques d'activité",
+    "activity_statistics_description": "Vos réalisations de fitness et d'activité",
+    "add_activity": "Ajouter une activité",
+    "add_first_trail": "Ajoutez votre premier sentier en utilisant le bouton ci-dessus",
+    "add_new_activity": "Ajouter une nouvelle activité",
+    "add_new_trail": "Ajouter un nouveau sentier",
+    "add_trail": "Ajouter une piste",
+    "add_visit": "Ajouter la visite",
+    "add_wanderer_trail": "Ajouter le sentier Wanderer",
+    "attachment_management": "Gestion de l'attachement",
+    "attachment_name_required": "Nom de la pièce jointe requis",
+    "attachment_remove_error": "Une erreur s'est produite lors du retrait de la pièce jointe",
+    "attachment_removed": "L'attachement supprimé avec succès",
+    "attachment_updated": "Pièce jointe mise à jour avec succès",
+    "average_cadence": "Cadence moyenne",
+    "average_speed": "Vitesse moyenne",
+    "avg_speed": "Vitesse moyenne",
+    "back": "Dos",
+    "cadence": "Cadence",
+    "calories": "Calories",
+    "click_map": "Cliquez sur la carte pour sélectionner un emplacement",
+    "click_on_map": "Cliquez sur la carte pour sélectionner un emplacement",
+    "complete_import": "Importation complète",
+    "complete_strava_import": "Importation complète de Strava",
+    "confirm_delete_activity": "Êtes-vous sûr de vouloir supprimer cette activité?",
+    "connect_to_wanderer": "Connectez-vous à Wanderer",
+    "continue": "Continuer",
+    "create_new_location": "Créer un nouvel emplacement",
+    "create_trail": "Créer une piste",
+    "created": "Créé",
+    "current_attachments": "Attachements actuels",
+    "date_selection": "Sélection de date",
+    "download_gpx": "Télécharger GPX",
+    "edit_visit": "Modifier la visite",
+    "elapsed_time": "Temps écoulé",
+    "elevation": "Élévation",
+    "elevation_gain": "Gain d'altitude",
+    "elevation_high": "Élévation élevée",
+    "elevation_loss": "Perte",
+    "elevation_low": "Élévation basse",
+    "end_lat": "Latitude finale",
+    "end_lng": "Fin de longitude",
+    "export_gpx": "Exporter gpx",
+    "export_original": "Exporter original",
+    "external_link": "Lien externe",
+    "gain": "gagner",
+    "getting_location_details": "Obtenir les détails de l'emplacement",
+    "gpx_file": "Fichier gpx",
+    "gpx_file_downloaded": "Fichier GPX téléchargé. \nVeuillez le télécharger ci-dessous pour terminer l'importation.",
+    "gpx_file_required": "Fichier GPX requis",
+    "image_management": "Gestion de l'image",
+    "import_activity": "Activité d'importation",
+    "importing": "Importation",
+    "likes": "Goûts",
+    "loading_activities": "Activités de chargement",
+    "location_display_name": "Nom de l'écran d'emplacement",
+    "location_map": "Emplacement",
+    "location_selected": "Emplacement sélectionné",
+    "max_speed": "Vitesse maximale",
+    "moving_time": "Temps de déménagement",
+    "next_image": "Image suivante",
+    "no_attachments_uploaded_yet": "Aucune pièce jointe encore téléchargée",
+    "no_external_link": "Aucun lien externe disponible",
+    "no_file_selected": "Aucun fichier sélectionné",
+    "no_images_uploaded_yet": "Aucune images encore téléchargées",
+    "no_strava_activities": "Aucune activité Strava trouvée lors de cette visite",
+    "no_trails_added": "Aucun sentier ajouté encore",
+    "no_trails_available": "Pas de sentiers disponibles",
+    "no_trails_found_matching": "Aucun sentier trouvé correspondant",
+    "no_visits_description": "Créez votre première visite en sélectionnant les dates ci-dessus",
+    "notes_placeholder": "Ajouter des notes sur cette visite",
+    "or": "OU",
+    "pace": "Rythme",
+    "photos": "Photos",
+    "previous_image": "Image précédente",
+    "processing": "Traitement",
+    "public_location_description": "Rendre cet emplacement visible pour les autres utilisateurs",
+    "remove_visit": "Supprimer la visite",
+    "rest_time": "Temps de repos",
+    "saved_activities": "Activités sauvées",
+    "search_location": "Rechercher un emplacement",
+    "search_placeholder": "Entrez la ville, l'emplacement ou le point de repère ...",
+    "search_trails_placeholder": "Recherchez les sentiers par nom",
+    "searching": "Recherche",
+    "select_on_map": "Sélectionner sur la carte",
+    "select_wanderer_trail": "Sélectionnez un sentier dans votre compte Wanderer",
+    "sport_type": "Type de sport",
+    "sport_type_placeholder": "Trace",
+    "start_lat": "Commencer la latitude",
+    "start_lng": "Commencer la longitude",
+    "strava_activities_during_visit": "Activités de Strava lors de la visite",
+    "strava_activity_ready": "Activité Strava prête",
+    "time": "Temps",
+    "total_covered": "Total couvert",
+    "total_recorded": "Total enregistré",
+    "trail": "Piste",
+    "trail_created_successfully": "Trail créé avec succès",
+    "trail_creation_failed": "Échec de la création de sentiers",
+    "trail_fetch_failed": "Échec de la récupération des sentiers Wanderer",
+    "trail_link_required": "Une liaison de sentier est requise",
+    "trail_name": "Nom du sentier",
+    "trail_removal_failed": "Échec de la suppression du sentier",
+    "trail_removed_successfully": "Le sentier a été supprimé avec succès",
+    "trail_update_failed": "Échec de la mise à jour du sentier",
+    "trail_updated_successfully": "Trail mis à jour avec succès",
+    "trails": "Sentiers",
+    "trails_found_for": "sentiers trouvés pour",
+    "trails_management": "Gestion des sentiers",
+    "trails_management_description": "Gérez les sentiers associés à cet emplacement. \nLes sentiers peuvent être liés à des services externes comme Alltrails ou à un lien vers Wanderer Trails.",
+    "update_location_details": "Mettre à jour les détails de l'emplacement",
+    "update_visit": "Mettre à jour la visite",
+    "upload_activity": "Télécharger l'activité",
+    "upload_attachment": "Télécharger la pièce jointe",
+    "upload_first_attachment": "Téléchargez votre première pièce jointe à l'aide des options ci-dessus",
+    "upload_first_image": "Téléchargez votre première image en utilisant l'une des options ci-dessus",
+    "upload_from_device": "Télécharger à partir de l'appareil",
+    "upload_from_url": "Télécharger de l'URL",
+    "upload_gpx_file": "Téléchargez le fichier gpx qui vient d'être téléchargé pour terminer l'importation de Strava",
+    "uploading": "Téléchargement",
+    "use_current_location": "Utiliser l'emplacement actuel",
+    "view_gpx": "Afficher GPX",
+    "view_on": "Voir",
+    "view_strava_activities": "Voir les activités de Strava",
+    "view_trail": "Voir le sentier",
+    "wanderer_integration_error": "L'intégration des vagabonds n'est pas activée ou a expiré.",
+    "wikipedia_error": "Échec de génération de description à partir de Wikipedia"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -399,7 +532,8 @@
     "oldest_first": "Le plus ancien premier",
     "unvisited_first": "Sans visité d'abord",
     "visited_first": "Visité en premier",
-    "total_items": "Total des articles"
+    "total_items": "Total des articles",
+    "getting_location_details": "Obtenir les détails de l'emplacement"
   },
   "settings": {
     "account_settings": "Paramètres du compte utilisateur",
@@ -802,7 +936,8 @@
     "disconnected": "Déconnecté avec succès de Strava",
     "not_configured": "Strava non configuré",
     "ready_to_connect": "Prêt à se connecter",
-    "strava_integration_desc": "Connectez-vous à Strava pour importer facilement vos activités dans des emplacements et des visites"
+    "strava_integration_desc": "Connectez-vous à Strava pour importer facilement vos activités dans des emplacements et des visites",
+    "gpx_required": "Veuillez télécharger le fichier gpx pour terminer l'importation de Strava"
   },
   "wanderer": {
     "connected": "Connecté avec succès à Wanderer",
