--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -266,7 +266,140 @@
     "leave_collection_warning": "Sei sicuro di voler lasciare questa collezione? \nTutte le posizioni aggiunte saranno non incazzate e rimarranno nel tuo account.",
     "left_collection_message": "Collezione lasciata con successo",
     "loading_collections": "Caricamento delle collezioni ...",
-    "quick_start": "Inizio rapido"
+    "quick_start": "Inizio rapido",
+    "achievements": "Risultati",
+    "active_duration": "Durata attiva",
+    "activities_name": "Attività",
+    "activity_name": "Nome dell'attività",
+    "activity_name_placeholder": "Corsa mattutina",
+    "activity_name_required": "È richiesto il nome dell'attività",
+    "activity_options": "Opzioni di attività",
+    "activity_statistics": "Statistiche di attività",
+    "activity_statistics_description": "I tuoi risultati di forma fisica e attività",
+    "add_activity": "Aggiungi attività",
+    "add_first_trail": "Aggiungi la tua prima traccia usando il pulsante sopra",
+    "add_new_activity": "Aggiungi nuova attività",
+    "add_new_trail": "Aggiungi nuovo sentiero",
+    "add_trail": "Aggiungi Trail",
+    "add_visit": "Aggiungi visita",
+    "add_wanderer_trail": "Aggiungi Wanderer Trail",
+    "attachment_management": "Gestione dell'attaccamento",
+    "attachment_name_required": "Nome allegato richiesto",
+    "attachment_remove_error": "Si è verificato un errore durante la rimozione dell'allegato",
+    "attachment_removed": "Allegato rimosso con successo",
+    "attachment_updated": "Allegato aggiornato correttamente",
+    "average_cadence": "Cadenza media",
+    "average_speed": "Velocità media",
+    "avg_speed": "Velocità media",
+    "back": "Indietro",
+    "cadence": "Cadenza",
+    "calories": "Calorie",
+    "click_map": "Fare clic sulla mappa per selezionare una posizione",
+    "click_on_map": "Fare clic sulla mappa per selezionare una posizione",
+    "complete_import": "Importazione completa",
+    "complete_strava_import": "Importazione Strava completa",
+    "confirm_delete_activity": "Sei sicuro di voler eliminare questa attività?",
+    "connect_to_wanderer": "Connettiti a Wanderer",
+    "continue": "Continuare",
+    "create_new_location": "Crea una nuova posizione",
+    "create_trail": "Crea trail",
+    "created": "Creato",
+    "current_attachments": "Allegati di corrente",
+    "date_selection": "Selezione della data",
+    "download_gpx": "Scarica GPX",
+    "edit_visit": "Modifica visita",
+    "elapsed_time": "Tempo trascorso",
+    "elevation": "Elevazione",
+    "elevation_gain": "Guadagno di elevazione",
+    "elevation_high": "Alto elevazione",
+    "elevation_loss": "Perdita di elevazione",
+    "elevation_low": "Elevazione bassa",
+    "end_lat": "Fine latitudine",
+    "end_lng": "Fine longitudine",
+    "export_gpx": "Esporta GPX",
+    "export_original": "Esporta originale",
+    "external_link": "Collegamento esterno",
+    "gain": "guadagno",
+    "getting_location_details": "Ottenere dettagli sulla posizione",
+    "gpx_file": "File gpx",
+    "gpx_file_downloaded": "File GPX scaricato. \nCaricalo di seguito per completare l'importazione.",
+    "gpx_file_required": "File GPX richiesto",
+    "image_management": "Gestione delle immagini",
+    "import_activity": "Attività di importazione",
+    "importing": "Importazione",
+    "likes": "Mi piace",
+    "loading_activities": "Attività di caricamento",
+    "location_display_name": "Nome visualizzazione della posizione",
+    "location_map": "Posizione",
+    "location_selected": "Posizione selezionata",
+    "max_speed": "Velocità massima",
+    "moving_time": "Tempo di trasloco",
+    "next_image": "Immagine successiva",
+    "no_attachments_uploaded_yet": "Nessun allegato ancora caricato",
+    "no_external_link": "Nessun collegamento esterno disponibile",
+    "no_file_selected": "Nessun file selezionato",
+    "no_images_uploaded_yet": "Nessuna immagine ancora caricata",
+    "no_strava_activities": "Nessuna attività Strava trovata durante questa visita",
+    "no_trails_added": "Nessun percorso ancora aggiunto",
+    "no_trails_available": "Nessun percorso disponibile",
+    "no_trails_found_matching": "Nessun percorso trovato abbinato",
+    "no_visits_description": "Crea la tua prima visita selezionando le date sopra",
+    "notes_placeholder": "Aggiungi note su questa visita",
+    "or": "O",
+    "pace": "Ritmo",
+    "photos": "Foto",
+    "previous_image": "Immagine precedente",
+    "processing": "Elaborazione",
+    "public_location_description": "Rendi questa posizione visibile ad altri utenti",
+    "remove_visit": "Rimuovere la visita",
+    "rest_time": "Tempo di riposo",
+    "saved_activities": "Attività salvate",
+    "search_location": "Cerca una posizione",
+    "search_placeholder": "Entra in città, posizione o punto di riferimento ...",
+    "search_trails_placeholder": "Cerca percorsi per nome",
+    "searching": "Ricerca",
+    "select_on_map": "Seleziona sulla mappa",
+    "select_wanderer_trail": "Seleziona un sentiero dal tuo account Wanderer",
+    "sport_type": "Tipo di sport",
+    "sport_type_placeholder": "Pista",
+    "start_lat": "Inizia latitudine",
+    "start_lng": "Inizia la longitudine",
+    "strava_activities_during_visit": "Attività di Strava durante la visita",
+    "strava_activity_ready": "Attività di Strava pronta",
+    "time": "Tempo",
+    "total_covered": "Coperto totale",
+    "total_recorded": "Totale registrato",
+    "trail": "Sentiero",
+    "trail_created_successfully": "Trail creata con successo",
+    "trail_creation_failed": "Impossibile creare Trail",
+    "trail_fetch_failed": "Non è riuscito a recuperare i sentieri vagabondi",
+    "trail_link_required": "È richiesto un collegamento a percorso",
+    "trail_name": "Nome del sentiero",
+    "trail_removal_failed": "Impossibile rimuovere il sentiero",
+    "trail_removed_successfully": "Trail rimosso con successo",
+    "trail_update_failed": "Impossibile aggiornare la traccia",
+    "trail_updated_successfully": "Trail aggiornato con successo",
+    "trails": "Trails",
+    "trails_found_for": "Trails trovati per",
+    "trails_management": "Gestione dei sentieri",
+    "trails_management_description": "Gestisci percorsi associati a questa posizione. \nI percorsi possono essere collegati a servizi esterni come Alltrails o Link a Wanderer Trails.",
+    "update_location_details": "Aggiorna i dettagli della posizione",
+    "update_visit": "Aggiornamento Visita",
+    "upload_activity": "Carica attività",
+    "upload_attachment": "Allegato di caricamento",
+    "upload_first_attachment": "Carica il tuo primo allegato utilizzando le opzioni sopra",
+    "upload_first_image": "Carica la tua prima immagine usando una delle opzioni sopra",
+    "upload_from_device": "Carica dal dispositivo",
+    "upload_from_url": "Carica dall'URL",
+    "upload_gpx_file": "Carica il file GPX che è stato appena scaricato per completare l'importazione Strava",
+    "uploading": "Caricamento",
+    "use_current_location": "Utilizzare la posizione corrente",
+    "view_gpx": "Visualizza GPX",
+    "view_on": "Visualizza su",
+    "view_strava_activities": "Visualizza le attività di Strava",
+    "view_trail": "Visualizza il percorso",
+    "wanderer_integration_error": "L'integrazione di Wanderer non è abilitata o è scaduta.",
+    "wikipedia_error": "Impossibile generare descrizione da Wikipedia"
   },
   "home": {
     "desc_1": "Scopri, pianifica ed esplora con facilità",
@@ -399,7 +532,8 @@
     "oldest_first": "Prima più antico",
     "unvisited_first": "Non visitato per primo",
     "visited_first": "Visitato per primo",
-    "total_items": "Articoli totali"
+    "total_items": "Articoli totali",
+    "getting_location_details": "Ottenere dettagli sulla posizione"
   },
   "settings": {
     "account_settings": "Impostazioni dell'account utente",
@@ -802,7 +936,8 @@
     "disconnected": "Disconnesso con successo da Strava",
     "not_configured": "Strava non configurato",
     "ready_to_connect": "Pronto per connettersi",
-    "strava_integration_desc": "Connettiti a Strava per importare facilmente le tue attivi in posizioni e visite"
+    "strava_integration_desc": "Connettiti a Strava per importare facilmente le tue attivi in posizioni e visite",
+    "gpx_required": "Carica il file GPX per completare l'importazione di Strava"
   },
   "wanderer": {
     "connected": "Collegato con successo a Wanderer",
