--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -266,7 +266,140 @@
     "leave_collection_warning": "Weet je zeker dat je deze collectie wilt verlaten? \nAlle locaties die u hebt toegevoegd, worden niet gekoppeld en blijven in uw account.",
     "left_collection_message": "Succesvol linkse collectie",
     "loading_collections": "Collecties laden ...",
-    "quick_start": "Snel begin"
+    "quick_start": "Snel begin",
+    "achievements": "Prestaties",
+    "active_duration": "Actieve duur",
+    "activities_name": "Activiteiten",
+    "activity_name": "Activiteitennaam",
+    "activity_name_placeholder": "Ochtendrun",
+    "activity_name_required": "Activiteitennaam is vereist",
+    "activity_options": "Activiteitsopties",
+    "activity_statistics": "Activiteitsstatistieken",
+    "activity_statistics_description": "Uw fitness- en activiteitenprestaties",
+    "add_activity": "Voeg activiteit toe",
+    "add_first_trail": "Voeg uw eerste pad toe met de knop hierboven",
+    "add_new_activity": "Voeg nieuwe activiteit toe",
+    "add_new_trail": "Voeg een nieuw pad toe",
+    "add_trail": "Trail toevoegen",
+    "add_visit": "Voeg bezoek toe",
+    "add_wanderer_trail": "Voeg Wanderer Trail toe",
+    "attachment_management": "Bijlagebeheer",
+    "attachment_name_required": "Bijlagenaam vereist",
+    "attachment_remove_error": "Er is een fout opgetreden bij het verwijderen van de bijlage",
+    "attachment_removed": "Bijlage met succes verwijderd",
+    "attachment_updated": "Bijlage met succes bijgewerkt",
+    "average_cadence": "Gemiddelde cadans",
+    "average_speed": "Gemiddelde snelheid",
+    "avg_speed": "Gemiddelde snelheid",
+    "back": "Rug",
+    "cadence": "Cadans",
+    "calories": "Calorieën",
+    "click_map": "Klik op de kaart om een locatie te selecteren",
+    "click_on_map": "Klik op de kaart om een locatie te selecteren",
+    "complete_import": "Volledige import",
+    "complete_strava_import": "Complete strava import",
+    "confirm_delete_activity": "Weet u zeker dat u deze activiteit wilt verwijderen?",
+    "connect_to_wanderer": "Maak verbinding met Wanderer",
+    "continue": "Doorgaan",
+    "create_new_location": "Maak een nieuwe locatie",
+    "create_trail": "Creëer Trail",
+    "created": "Gecreëerd",
+    "current_attachments": "Huidige bijlagen",
+    "date_selection": "Datum selectie",
+    "download_gpx": "Download GPX",
+    "edit_visit": "Bewerk bezoek",
+    "elapsed_time": "Verstreken tijd",
+    "elevation": "Hoogte",
+    "elevation_gain": "Hoogtewinst",
+    "elevation_high": "Hoogte hoog",
+    "elevation_loss": "Hoogteverlies",
+    "elevation_low": "Hoogte laag",
+    "end_lat": "Eindbreedtegraad",
+    "end_lng": "Einde lengtegraad",
+    "export_gpx": "Exporteer GPX",
+    "export_original": "Exporteren origineel",
+    "external_link": "Externe link",
+    "gain": "verdienen",
+    "getting_location_details": "Locatiegegevens krijgen",
+    "gpx_file": "GPX -bestand",
+    "gpx_file_downloaded": "GPX -bestand gedownload. \nUpload het hieronder om de import te voltooien.",
+    "gpx_file_required": "GPX -bestand vereist",
+    "image_management": "Beeldbeheer",
+    "import_activity": "Importactiviteit",
+    "importing": "Importeren",
+    "likes": "Likes",
+    "loading_activities": "Laadactiviteiten",
+    "location_display_name": "Locatieweergavennaam",
+    "location_map": "Locatie",
+    "location_selected": "Locatie geselecteerd",
+    "max_speed": "Maximale snelheid",
+    "moving_time": "Verplaatsingstijd",
+    "next_image": "Volgende afbeelding",
+    "no_attachments_uploaded_yet": "Nog geen bijlagen geüpload",
+    "no_external_link": "Geen externe link beschikbaar",
+    "no_file_selected": "Geen bestand geselecteerd",
+    "no_images_uploaded_yet": "Nog geen afbeeldingen geüpload",
+    "no_strava_activities": "Geen Strava -activiteiten gevonden tijdens dit bezoek",
+    "no_trails_added": "Nog geen paden toegevoegd",
+    "no_trails_available": "Geen paden beschikbaar",
+    "no_trails_found_matching": "Geen paden gevonden bij matching",
+    "no_visits_description": "Maak uw eerste bezoek door datums hierboven te selecteren",
+    "notes_placeholder": "Notities toevoegen over dit bezoek",
+    "or": "OF",
+    "pace": "Tempo",
+    "photos": "Foto's",
+    "previous_image": "Vorige afbeelding",
+    "processing": "Verwerking",
+    "public_location_description": "Maak deze locatie zichtbaar voor andere gebruikers",
+    "remove_visit": "Verwijder bezoek",
+    "rest_time": "Rusttijd",
+    "saved_activities": "Geredde activiteiten",
+    "search_location": "Zoek naar een locatie",
+    "search_placeholder": "Betreed stad, locatie of monument ...",
+    "search_trails_placeholder": "Zoek paden bij naam",
+    "searching": "Doorzoeking",
+    "select_on_map": "Selecteer op kaart",
+    "select_wanderer_trail": "Selecteer een spoor van uw Wanderer -account",
+    "sport_type": "Sporttype",
+    "sport_type_placeholder": "Trail lopen",
+    "start_lat": "Start Latitude",
+    "start_lng": "Begin lengtegraad",
+    "strava_activities_during_visit": "Strava -activiteiten tijdens bezoek",
+    "strava_activity_ready": "Strava -activiteit klaar",
+    "time": "Tijd",
+    "total_covered": "Totaal bedekt",
+    "total_recorded": "Totaal geregistreerd",
+    "trail": "Pad",
+    "trail_created_successfully": "Trail met succes gemaakt",
+    "trail_creation_failed": "Kan trail niet maken",
+    "trail_fetch_failed": "Kan Wanderer -paden niet halen",
+    "trail_link_required": "Een traillink is vereist",
+    "trail_name": "Spoornaam",
+    "trail_removal_failed": "Kan het pad niet verwijderen",
+    "trail_removed_successfully": "Trail is met succes verwijderd",
+    "trail_update_failed": "Kan Trail niet bijwerken",
+    "trail_updated_successfully": "Trail is succesvol bijgewerkt",
+    "trails": "Paden",
+    "trails_found_for": "paden gevonden voor",
+    "trails_management": "Trails management",
+    "trails_management_description": "Beheer paden die aan deze locatie zijn gekoppeld. \nTrails kunnen worden gekoppeld aan externe services zoals AllTrails of Link to Wanderer Trails.",
+    "update_location_details": "Update locatiegegevens",
+    "update_visit": "Update bezoek",
+    "upload_activity": "Upload activiteit",
+    "upload_attachment": "Upload bijlage",
+    "upload_first_attachment": "Upload uw eerste bijlage met de bovenstaande opties",
+    "upload_first_image": "Upload uw eerste afbeelding met behulp van een van de bovenstaande opties",
+    "upload_from_device": "Upload van apparaat",
+    "upload_from_url": "Upload van URL",
+    "upload_gpx_file": "Upload het GPX -bestand dat net is gedownload om de strava -import te voltooien",
+    "uploading": "Het uploaden",
+    "use_current_location": "Gebruik de huidige locatie",
+    "view_gpx": "Bekijk GPX",
+    "view_on": "Bekijk",
+    "view_strava_activities": "Bekijk Strava -activiteiten",
+    "view_trail": "Bekijk pad",
+    "wanderer_integration_error": "Wanderer -integratie is niet ingeschakeld of is verlopen.",
+    "wikipedia_error": "Kan geen beschrijving van Wikipedia genereren"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -399,7 +532,8 @@
     "oldest_first": "Oudste eerste",
     "unvisited_first": "Eerst niet bezocht",
     "visited_first": "Eerst bezocht",
-    "total_items": "Totale items"
+    "total_items": "Totale items",
+    "getting_location_details": "Locatiegegevens krijgen"
   },
   "settings": {
     "account_settings": "Gebruikersaccount instellingen",
@@ -802,7 +936,8 @@
     "disconnected": "Met succes losgekoppeld van Strava",
     "not_configured": "Strava niet geconfigureerd",
     "ready_to_connect": "Klaar om verbinding te maken",
-    "strava_integration_desc": "Maak verbinding met Strava om uw activties eenvoudig te importeren in locaties en bezoeken"
+    "strava_integration_desc": "Maak verbinding met Strava om uw activties eenvoudig te importeren in locaties en bezoeken",
+    "gpx_required": "Upload het GPX -bestand om de strava -import te voltooien"
   },
   "wanderer": {
     "connected": "Succesvol verbonden met Wanderer",
