--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -318,7 +318,140 @@
     "leave_collection_warning": "Czy na pewno chcesz opuścić tę kolekcję? \nWszelkie dodane lokalizacje zostaną niezłączone i pozostaną na Twoim koncie.",
     "left_collection_message": "Z powodzeniem pozostawiono kolekcję",
     "loading_collections": "Ładowanie kolekcji ...",
-    "quick_start": "Szybki start"
+    "quick_start": "Szybki start",
+    "achievements": "Osiągnięcia",
+    "active_duration": "Aktywny czas trwania",
+    "activities_name": "Zajęcia",
+    "activity_name": "Nazwa aktywności",
+    "activity_name_placeholder": "Poranny bieg",
+    "activity_name_required": "Nazwa aktywności jest wymagana",
+    "activity_options": "Opcje aktywności",
+    "activity_statistics": "Statystyka aktywności",
+    "activity_statistics_description": "Twoje osiągnięcia kondycyjne i aktywności",
+    "add_activity": "Dodaj aktywność",
+    "add_first_trail": "Dodaj swój pierwszy szlak za pomocą przycisku powyżej",
+    "add_new_activity": "Dodaj nową aktywność",
+    "add_new_trail": "Dodaj nowy szlak",
+    "add_trail": "Dodaj szlak",
+    "add_visit": "Dodaj wizytę",
+    "add_wanderer_trail": "Dodaj szlak Wanderer",
+    "attachment_management": "Zarządzanie przywiązaniem",
+    "attachment_name_required": "Wymagana nazwa załącznika",
+    "attachment_remove_error": "Wystąpił błąd podczas usuwania załącznika",
+    "attachment_removed": "Załącznik usunięto pomyślnie",
+    "attachment_updated": "Załącznik pomyślnie zaktualizowany",
+    "average_cadence": "Średnia kadencja",
+    "average_speed": "Średnia prędkość",
+    "avg_speed": "Średnia prędkość",
+    "back": "Z powrotem",
+    "cadence": "Rytm",
+    "calories": "Kalorie",
+    "click_map": "Kliknij mapę, aby wybrać lokalizację",
+    "click_on_map": "Kliknij mapę, aby wybrać lokalizację",
+    "complete_import": "Kompletny import",
+    "complete_strava_import": "Kompletny import Strava",
+    "confirm_delete_activity": "Czy na pewno chcesz usunąć tę aktywność?",
+    "connect_to_wanderer": "Połącz się z Wandererem",
+    "continue": "Kontynuować",
+    "create_new_location": "Utwórz nową lokalizację",
+    "create_trail": "Utwórz szlak",
+    "created": "Stworzony",
+    "current_attachments": "Aktualne załączniki",
+    "date_selection": "Wybór daty",
+    "download_gpx": "Pobierz GPX",
+    "edit_visit": "Edytuj wizytę",
+    "elapsed_time": "Upłynął czas",
+    "elevation": "Podniesienie",
+    "elevation_gain": "Wzrost wysokości",
+    "elevation_high": "Wysokość wysokości",
+    "elevation_loss": "Utrata wysokości",
+    "elevation_low": "Niska wysokość",
+    "end_lat": "Zakończyć szerokość geograficzną",
+    "end_lng": "Zakończyć długość geograficzną",
+    "export_gpx": "Eksportuj GPX",
+    "export_original": "Eksportuj oryginał",
+    "external_link": "Link zewnętrzny",
+    "gain": "osiągać",
+    "getting_location_details": "Uzyskanie szczegółów lokalizacji",
+    "gpx_file": "Plik GPX",
+    "gpx_file_downloaded": "Pobrano plik GPX. \nPrześlij go poniżej, aby zakończyć import.",
+    "gpx_file_required": "Wymagany plik GPX",
+    "image_management": "Zarządzanie obrazem",
+    "import_activity": "Aktywność importowa",
+    "importing": "Import",
+    "likes": "Upodobania",
+    "loading_activities": "Czynności ładowania",
+    "location_display_name": "Nazwa wyświetlania lokalizacji",
+    "location_map": "Lokalizacja",
+    "location_selected": "Wybrana lokalizacja",
+    "max_speed": "Maksymalna prędkość",
+    "moving_time": "Czas przeprowadzki",
+    "next_image": "Następny obraz",
+    "no_attachments_uploaded_yet": "Nie przesłano jeszcze załadowań",
+    "no_external_link": "Brak linku zewnętrznego",
+    "no_file_selected": "Brak pliku",
+    "no_images_uploaded_yet": "Nie przesłano jeszcze obrazów",
+    "no_strava_activities": "Podczas tej wizyty nie znaleziono żadnych działań Strava",
+    "no_trails_added": "Nie dodano jeszcze żadnych szlaków",
+    "no_trails_available": "Brak dostępnych szlaków",
+    "no_trails_found_matching": "Brak pasujących szlaków",
+    "no_visits_description": "Utwórz pierwszą wizytę, wybierając powyższe daty",
+    "notes_placeholder": "Dodaj notatki o tej wizycie",
+    "or": "LUB",
+    "pace": "Tempo",
+    "photos": "Zdjęcia",
+    "previous_image": "Poprzedni obraz",
+    "processing": "Przetwarzanie",
+    "public_location_description": "Spraw, aby ta lokalizacja była widoczna dla innych użytkowników",
+    "remove_visit": "Usuń wizytę",
+    "rest_time": "Czas odpoczynku",
+    "saved_activities": "Uratowane działania",
+    "search_location": "Wyszukaj lokalizację",
+    "search_placeholder": "Wejdź do miasta, lokalizacji lub punktu orientacyjnego ...",
+    "search_trails_placeholder": "Wyszukaj szlaki według nazwy",
+    "searching": "Badawczy",
+    "select_on_map": "Wybierz na mapie",
+    "select_wanderer_trail": "Wybierz szlak z konta Wanderer",
+    "sport_type": "Typ sportu",
+    "sport_type_placeholder": "Bieganie szlaku",
+    "start_lat": "Rozpocznij szerokość geograficzną",
+    "start_lng": "Rozpocznij długość geograficzną",
+    "strava_activities_during_visit": "Zajęcia Strava podczas wizyty",
+    "strava_activity_ready": "Gotowa aktywność Strava",
+    "time": "Czas",
+    "total_covered": "Całkowity objęty",
+    "total_recorded": "Całkowity zarejestrowany",
+    "trail": "Ścieżka",
+    "trail_created_successfully": "Szlak stworzony z powodzeniem",
+    "trail_creation_failed": "Nie udało się stworzyć szlaku",
+    "trail_fetch_failed": "Nie udało się przynieść Wanderer Trails",
+    "trail_link_required": "Wymagany jest link szlakowy",
+    "trail_name": "Nazwa szlaku",
+    "trail_removal_failed": "Nie udało się usunąć szlaku",
+    "trail_removed_successfully": "Szlak pomyślnie usunięty",
+    "trail_update_failed": "Nie udało się zaktualizować szlaku",
+    "trail_updated_successfully": "Szlak pomyślnie zaktualizowany",
+    "trails": "Szlaki",
+    "trails_found_for": "Znaleziono szlaki",
+    "trails_management": "Zarządzanie szlakami",
+    "trails_management_description": "Zarządzaj szlakami powiązanymi z tą lokalizacją. \nSzlaki można połączyć z usługami zewnętrznymi, takimi jak AllTrails lub link do Wanderer Trails.",
+    "update_location_details": "Zaktualizuj szczegóły lokalizacji",
+    "update_visit": "Aktualizacja wizyta",
+    "upload_activity": "Przesyłanie aktywności",
+    "upload_attachment": "Prześlij załącznik",
+    "upload_first_attachment": "Prześlij swój pierwszy załącznik, korzystając z powyższych opcji",
+    "upload_first_image": "Prześlij swój pierwszy obraz za pomocą jednej z powyższych opcji",
+    "upload_from_device": "Prześlij z urządzenia",
+    "upload_from_url": "Prześlij z adresu URL",
+    "upload_gpx_file": "Prześlij plik GPX, który został właśnie pobrany, aby zakończyć import Strava",
+    "uploading": "Przesyłanie",
+    "use_current_location": "Użyj aktualnej lokalizacji",
+    "view_gpx": "Zobacz GPX",
+    "view_on": "Zobacz",
+    "view_strava_activities": "Zobacz działania Strava",
+    "view_trail": "Zobacz szlak",
+    "wanderer_integration_error": "Integracja Wanderer nie jest włączona lub wygasła.",
+    "wikipedia_error": "Nie udało się wygenerować opisu z Wikipedii"
   },
   "worldtravel": {
     "country_list": "Lista krajów",
@@ -374,7 +507,8 @@
     "oldest_first": "Najstarszy pierwszy",
     "unvisited_first": "Najpierw niewidziane",
     "visited_first": "Odwiedziłem pierwszy",
-    "total_items": "Całkowite przedmioty"
+    "total_items": "Całkowite przedmioty",
+    "getting_location_details": "Uzyskanie szczegółów lokalizacji"
   },
   "auth": {
     "username": "Nazwa użytkownika",
@@ -802,7 +936,8 @@
     "disconnected": "Pomyślnie odłączony od Strava",
     "not_configured": "Strava nie skonfigurowana",
     "ready_to_connect": "Gotowy do połączenia",
-    "strava_integration_desc": "Połącz się z Stravą, aby łatwo zaimportować swoje czynności do lokalizacji i wizyt"
+    "strava_integration_desc": "Połącz się z Stravą, aby łatwo zaimportować swoje czynności do lokalizacji i wizyt",
+    "gpx_required": "Prześlij plik GPX, aby wypełnić import Strava"
   },
   "wanderer": {
     "connected": "Pomyślnie związany z Wandererem",
